<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:orientation="vertical"
    android:background="@drawable/fond2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:text="@string/titulo1"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/subtitulo1"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnCaso1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caso1"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/azulRey"/>

    <Button
        android:id="@+id/btnCaso2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caso2"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/azulRey"/>

    <Button
        android:id="@+id/btnListado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/btnhistorial"
        android:backgroundTint="@color/azulRey"/>





</LinearLayout>